--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -1,100 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".AttendanceActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <include
-        android:id="@+id/app_bar"
-        layout="@layout/app_bar"
-        />
+    </android.support.design.widget.AppBarLayout>
+
     <include layout="@layout/content_main" />
 
-    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:id="@+id/container"-->
-        <!--android:layout_marginTop="7dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/app_bar"-->
-        <!--android:paddingLeft="7dp"-->
-        <!--android:paddingRight="7dp">-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/qrcode_scan" />
 
-        <!--<android.support.v7.widget.CardView-->
-            <!--android:id="@+id/cv"-->
-            <!--android:padding="10dp"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content">-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:orientation="vertical">-->
-
-                <!--<LinearLayout-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:orientation="vertical"-->
-                    <!--android:gravity="center_vertical"-->
-                    <!--android:padding="16dp">-->
-
-                    <!--<TextView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginRight="20dp"-->
-                        <!--android:text="Student Attendance Record"-->
-                        <!--android:textColor="@color/colorPrimary"-->
-                        <!--android:textStyle="bold" />-->
-                    <!--<TextView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginRight="20dp"-->
-                        <!--android:text="Date: "-->
-                        <!--android:textColor="@color/colorPrimary"-->
-                        <!--android:textStyle="bold" />-->
-                    <!--<TextView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginRight="20dp"-->
-                        <!--android:text="Week: "-->
-                        <!--android:textColor="@color/colorPrimary"-->
-                        <!--android:textStyle="bold" />-->
-
-
-                <!--</LinearLayout>-->
-
-            <!--</LinearLayout>-->
-
-
-        <!--</android.support.v7.widget.CardView>-->
-    <!--</LinearLayout>-->
-
-    <!--<LinearLayout android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<ListView android:id="@+id/listView"-->
-            <!--android:layout_height="0dip"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/tvresult"-->
-            <!--android:textColor="#000"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-            <!--android:text="Result will be here"/>-->
-
-
-        <!--<Button android:id="@+id/btn"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Scan QR code"/>-->
-
-    <!--</LinearLayout>-->
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
