--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -18,6 +18,7 @@
         android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/name"
         android:layout_marginTop="5dp"
         android:text="Android 6.0"
         android:textColor="@android:color/black" />
@@ -41,9 +42,10 @@
             android:id="@+id/version_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="API: "
+            android:text="Student Number: "
             android:textColor="@android:color/black"
             android:textStyle="bold" />
+
 
         <TextView
             android:id="@+id/version_number"
@@ -54,6 +56,9 @@
             android:textColor="@android:color/black"
             android:textStyle="bold" />
 
+
     </LinearLayout>
 
+
 </RelativeLayout>
+
