--- a/app/src/main/res/layout/student_card.xml
+++ b/app/src/main/res/layout/student_card.xml
@@ -29,7 +29,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/student_number"
+                    android:id="@+id/class_week"
                     android:layout_gravity="center"
                     android:textSize="12dp"
                     android:text="asdsdas"
@@ -38,63 +38,22 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/student_name"
+                    android:id="@+id/student_number"
                     android:layout_gravity="center"
-                    android:textSize="15dp"
-                    android:gravity="clip_horizontal" />
-
-
+                    android:textSize="12dp"
+                    android:text="asdsdas"
+                    android:layout_marginRight="10dp"
+                    android:gravity="clip_horizontal"
+                    android:textStyle="bold" />
             </LinearLayout>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/student_nickname"
-                android:layout_gravity="center"
-                android:textSize="15dp"
-                android:gravity="clip_horizontal" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/student_birthdate"
-                android:layout_gravity="center"
-                android:textSize="15dp"
-                android:gravity="clip_horizontal" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/student_contact"
-                android:layout_gravity="center"
-                android:textSize="15dp"
-                android:gravity="clip_horizontal" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/student_leader"
-                android:layout_gravity="center"
-                android:textSize="15dp"
-                android:gravity="clip_horizontal" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/student_contactleader"
-                android:layout_gravity="center"
-                android:textSize="15dp"
-                android:gravity="clip_horizontal" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/student_network"
-                android:layout_gravity="center"
-                android:textSize="15dp"
-                android:gravity="clip_horizontal" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/student_class"
+                android:id="@+id/student_status"
                 android:layout_gravity="center"
                 android:textSize="15dp"
                 android:gravity="clip_horizontal" />
