--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,94 +44,17 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="20dp"
                         android:text="Student Attendance Record"
+                        android:textSize="20dp"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/clientCode"
-                            android:layout_gravity="center"
-                            android:textSize="12dp"
-                            android:layout_marginRight="10dp"
-                            android:gravity="clip_horizontal"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/clientName"
-                            android:layout_gravity="center"
-                            android:textSize="15dp"
-                            android:gravity="clip_horizontal" />
-
-                    </LinearLayout>
-
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical|right"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="15dp"
-                        >
-
-                        <!--<LinearLayout-->
-                            <!--android:layout_width="wrap_content"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:gravity="center_vertical|right"-->
-                            <!--android:id="@+id/clientCall_icon">-->
-
-                            <!--<ImageView-->
-
-                                <!--android:layout_width="wrap_content"-->
-                                <!--android:layout_height="wrap_content"-->
-                                <!--android:layout_gravity="center"-->
-                                <!--android:layout_marginRight="5dp"-->
-                                <!--android:src="@drawable/phone" />-->
-
-                            <!--<TextView-->
-                                <!--android:layout_width="wrap_content"-->
-                                <!--android:layout_height="wrap_content"-->
-                                <!--android:layout_marginRight="20dp"-->
-                                <!--android:text="client call"-->
-                                <!--android:textColor="@color/colorPrimary"-->
-
-                                <!--android:textStyle="bold" />-->
-                        <!--</LinearLayout>-->
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical|right"
-                            android:id="@+id/clientTimeOut_icon">
-
-                            <ImageView
-
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginRight="5dp"
-                                android:src="@drawable/alarm" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="7dp"
-                                android:text="Upload"
-                                android:textColor="@color/colorPrimary"
-
-                                android:textStyle="bold" />
-                        </LinearLayout>
-                    </LinearLayout>
-
+                        android:layout_marginRight="20dp"
+                        android:text="Week 1"
+                        android:textSize="15dp"
+                        android:textColor="@color/colorPrimary"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -145,7 +68,7 @@
         android:id="@+id/card_recycler_view"
         android:layout_marginTop="7dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/container"
         android:scrollbars="vertical" />
 
