--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,15 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+
+    <style name="MediumButton" parent="@android:style/Widget.Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@string/font_family_light</item>
+        <item name="android:background">@drawable/outline_rounded</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
+
+
+
 </resources>
