--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
                         android:layout_marginRight="20dp"
                         android:text="Student Attendance Record"
                         android:textSize="20dp"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textStyle="bold" />
                     <TextView
                         android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                         android:layout_marginRight="20dp"
                         android:text="Week 1"
                         android:textSize="15dp"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/grey_text"
                         android:textStyle="bold" />
                 </LinearLayout>
 
@@ -70,6 +70,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/container"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:scrollbars="vertical" />
 
 </RelativeLayout>
