--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -76,6 +76,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
             android:src="@android:drawable/ic_dialog_info" />
         </RelativeLayout>
 
